# clean-actions

./: .editorconfig  LICENSE  Makefile  README.md  contributing.md  mypy.ini  pyproject.toml  pytest.ini
clean_actions/: __init__.py  api.py  clean.py  cli.py  yaml.py
clean_actions/features/: cleanup_commands.py  commands.py  global_run_as.py  strip_x_prefixed_root_tags.py
docs/: Gemfile  _config.yml  features.md  index.md
tests/: conftest.py  test_yaml.py
tests/cases/: anchors.case.yml  default-runs-on.yml  preserve-quotes.case.yml  preserves-long-strings.case.yml
tests/cases/commands/: base.case.yml  env.case.yml  env.yml  id-expansion.case.yml  inputs.case.yml  outputs.case.yml
