[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "clean_actions"
author = "Anthony King"
description-file = "README.md"
home-page = "https://github.com/cybojenix/clean-actions"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Pre-processors",
  "Topic :: Software Development :: Testing",
]

requires = [
  "ruamel.yaml",
  "click",
]

[tool.flit.metadata.requires-extra]
test = [
  "pytest",
  "pytest-cov",
  "pytest-randomly",
  "py",
]
dev = [
  "autoflake",
  "black",
  "isort",
  "mypy",
]

[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88
indent="    "
